--- a/config/locales/es_CR.yml
+++ b/config/locales/es_CR.yml
@@ -119,6 +119,8 @@ es_CR:
     integer_array_validator:
       not_array_error: "debe ser una lista"
       invalid_element_error: "debe contener solo enteros válidos"
+  datetime_picker_ui:
+    time_text: Hora
   enterprise_mailer:
     confirmation_instructions:
       subject: "Por favor, confirma la dirección de correo electrónico de %{enterprise}"
@@ -646,6 +648,8 @@ es_CR:
           promo_image_note1: 'ATENCIÓN:'
           promo_image_note2: La imagen será recortada a  1200 x 260.
           promo_image_note3: La imagen se mostrará en la parte superior del perfil de la organización y en pop-ups.
+          remove_logo: "Eliminar la imágen"
+          remove_promo_image: "Eliminar la imágen"
         inventory_settings:
           text1: Puedes optar por administrar los niveles de stock y los precios a través de tu
           inventory: inventario
@@ -832,14 +836,6 @@ es_CR:
       new:
         title: Nueva Organización
         back_link: Volver a la lista de organizaciones
-      remove_logo:
-        remove: "Eliminar la imágen"
-        removed_successfully: "Logotipo eliminado con éxito"
-        immediate_removal_warning: "El logotipo se eliminará inmediatamente después de confirmar."
-      remove_promo_image:
-        remove: "Eliminar la imagen"
-        removed_successfully: "Imágen promocional eliminada con éxito"
-        immediate_removal_warning: "La imágen promocional se eliminará inmediatamente después de confirmar."
       welcome:
         welcome_title: ¡Bienvenido a Open Food Network (LaFeriaCR)!
         welcome_text: Ha creado correctamente un
@@ -2537,6 +2533,13 @@ es_CR:
         error_saving: "Error al guardar suscripción "
         new:
           please_select_a_shop: "Por favor seleccione una tienda"
+      enterprises:
+        form:
+          images:
+            removed_logo_successfully: "Logotipo eliminado con éxito"
+            immediate_logo_removal_warning: "El logotipo se eliminará inmediatamente después de confirmar."
+            removed_promo_image_successfully: "Imágen promocional eliminada con éxito"
+            immediate_promo_image_removal_warning: "La imágen promocional se eliminará inmediatamente después de confirmar."
     insufficient_stock: "Inventario insuficiente disponible, solo quedan %{on_hand}"
     out_of_stock:
       reduced_stock_available: Inventario reducido disponible
