--- a/config/locales/en_IE.yml
+++ b/config/locales/en_IE.yml
@@ -120,6 +120,9 @@ en_IE:
     integer_array_validator:
       not_array_error: "must be an array"
       invalid_element_error: "must contain only valid integers"
+  datetime_picker_ui:
+    close_text: Done
+    time_text: Time
   enterprise_mailer:
     confirmation_instructions:
       subject: "Please confirm the email address for %{enterprise}"
@@ -655,6 +658,8 @@ en_IE:
           promo_image_note1: 'PLEASE NOTE:'
           promo_image_note2: Any promo image uploaded here will be cropped to 1200 x 260.
           promo_image_note3: The promo image is displayed at the top of an enterprise's profile page and pop-ups.
+          remove_logo: "Remove Image"
+          remove_promo_image: "Remove Image"
         inventory_settings:
           text1: You may opt to manage stock levels and prices in via your
           inventory: inventory
@@ -840,14 +845,6 @@ en_IE:
       new:
         title: New Enterprise
         back_link: Back to enterprises list
-      remove_logo:
-        remove: "Remove Image"
-        removed_successfully: "Logo removed successfully"
-        immediate_removal_warning: "The logo will be removed immediately after you confirm."
-      remove_promo_image:
-        remove: "Remove Image"
-        removed_successfully: "Promo image removed successfully"
-        immediate_removal_warning: "The promo image will be removed immediately after you confirm."
       welcome:
         welcome_title: Welcome to the Open Food Network!
         welcome_text: You have successfully created a
@@ -2573,6 +2570,13 @@ en_IE:
         error_saving: "Error saving subscription"
         new:
           please_select_a_shop: "Please select a shop"
+      enterprises:
+        form:
+          images:
+            removed_logo_successfully: "Logo removed successfully"
+            immediate_logo_removal_warning: "The logo will be removed immediately after you confirm."
+            removed_promo_image_successfully: "Promo image removed successfully"
+            immediate_promo_image_removal_warning: "The promo image will be removed immediately after you confirm."
     insufficient_stock: "Insufficient stock available, only %{on_hand} remaining"
     out_of_stock:
       reduced_stock_available: Reduced stock available
