--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -120,6 +120,9 @@ en_US:
     integer_array_validator:
       not_array_error: "must be an array"
       invalid_element_error: "must contain only valid integers"
+  datetime_picker_ui:
+    close_text: Done
+    time_text: Time
   enterprise_mailer:
     confirmation_instructions:
       subject: "Please confirm the email address for %{enterprise}"
@@ -656,6 +659,8 @@ en_US:
           promo_image_note1: 'PLEASE NOTE:'
           promo_image_note2: Any promo image uploaded here will be cropped to 1200 x 260.
           promo_image_note3: The promo image is displayed at the top of an enterprise's profile page and pop-ups.
+          remove_logo: "Remove Image"
+          remove_promo_image: "Remove Image"
         inventory_settings:
           text1: You may opt to manage stock levels and prices in via your
           inventory: inventory
@@ -843,14 +848,6 @@ en_US:
       new:
         title: New Enterprise
         back_link: Back to enterprises list
-      remove_logo:
-        remove: "Remove Image"
-        removed_successfully: "Logo removed successfully"
-        immediate_removal_warning: "The logo will be removed immediately after you confirm."
-      remove_promo_image:
-        remove: "Remove Image"
-        removed_successfully: "Promo image removed successfully"
-        immediate_removal_warning: "The promo image will be removed immediately after you confirm."
       welcome:
         welcome_title: Welcome to the Open Food Network!
         welcome_text: You have successfully created a
@@ -1244,7 +1241,7 @@ en_US:
   menu_4_title: "Groups"
   menu_4_url: "/groups"
   menu_5_title: "About"
-  menu_5_url: "https://about.openfoodnetwork.org.au/"
+  menu_5_url: "https://www.openfoodnetwork.org/about-us/"
   menu_6_title: "Connect"
   menu_6_url: "https://openfoodnetwork.org/au/connect/"
   menu_7_title: "Learn"
@@ -2570,6 +2567,13 @@ en_US:
         error_saving: "Error saving subscription"
         new:
           please_select_a_shop: "Please select a shop"
+      enterprises:
+        form:
+          images:
+            removed_logo_successfully: "Logo removed successfully"
+            immediate_logo_removal_warning: "The logo will be removed immediately after you confirm."
+            removed_promo_image_successfully: "Promo image removed successfully"
+            immediate_promo_image_removal_warning: "The promo image will be removed immediately after you confirm."
     insufficient_stock: "Insufficient stock available, only %{on_hand} remaining"
     out_of_stock:
       reduced_stock_available: Reduced stock available
@@ -2647,7 +2651,7 @@ en_US:
       unknown_error_from_stripe: |
           There was a problem setting up your card in our payments gateway.
           Please refresh the page and try again, if it fails a second time,
-          please contact us (support-usa@openfoodnetwork.net for help.
+          please contact us at support-usa@openfoodnetwork.net for help.
   inflections:
     each:
       one: "each"
