--- a/config/locales/fr_BE.yml
+++ b/config/locales/fr_BE.yml
@@ -120,6 +120,9 @@ fr_BE:
     integer_array_validator:
       not_array_error: "doit être un array"
       invalid_element_error: "doit contenir uniquement des nombres entiers"
+  datetime_picker_ui:
+    close_text: Terminé
+    time_text: Heure
   enterprise_mailer:
     confirmation_instructions:
       subject: "Confirmez l'adresse email pour %{enterprise}"
@@ -655,6 +658,8 @@ fr_BE:
           promo_image_note1: 'ATTENTION:'
           promo_image_note2: Votre bannière doit mesurer 1200 x 260, toute image non conforme sera rognée.
           promo_image_note3: La bannière est affichée en haut de la page de votre entreprise et dans sa version condensée (pop-up).
+          remove_logo: "Supprimer l'image"
+          remove_promo_image: "Supprimer l'image"
         inventory_settings:
           text1: Vous pouvez choisir de gérer vos stocks et prix via votre
           inventory: catalogue comptoir
@@ -844,14 +849,6 @@ fr_BE:
       new:
         title: Nouvelle entreprise
         back_link: Revenir à la liste des entreprises
-      remove_logo:
-        remove: "Supprimer l'image"
-        removed_successfully: "Logo supprimé avec succès"
-        immediate_removal_warning: "Le logo sera supprimé juste après votre confirmation."
-      remove_promo_image:
-        remove: "Supprimer l'image"
-        removed_successfully: "Bannière supprimée avec succès"
-        immediate_removal_warning: "La bannière sera supprimée juste après votre confirmation."
       welcome:
         welcome_title: Bienvenue sur Open Food Network !
         welcome_text: 'Vous avez créé avec succès '
@@ -2583,6 +2580,13 @@ fr_BE:
         error_saving: "Erreur pendant la sauvegarde de la commande récurrente"
         new:
           please_select_a_shop: "Veuillez choisir un comptoir"
+      enterprises:
+        form:
+          images:
+            removed_logo_successfully: "Logo supprimé avec succès"
+            immediate_logo_removal_warning: "Le logo sera supprimé juste après votre confirmation."
+            removed_promo_image_successfully: "Bannière supprimée avec succès"
+            immediate_promo_image_removal_warning: "La bannière sera supprimée juste après votre confirmation."
     insufficient_stock: "Stock disponible insuffisant , il ne reste que %{on_hand}"
     out_of_stock:
       reduced_stock_available: Stock disponible
