--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2120,6 +2120,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   calculator: "Calculator"
   calculator_values: "Calculator values"
   calculator_settings_warning: "If you are changing the calculator type, you must save first before you can edit the calculator settings"
+  calculator_preferred_unit_error: "must be kg or lb"
   flat_percent_per_item: "Flat Percent (per item)"
   flat_rate_per_item: "Flat Rate (per item)"
   flat_rate_per_order: "Flat Rate (per order)"
